--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,13 @@ _MACOSX/*
 .idea/*
 .idea
 
-#css
-#css/*
-#style.css
-#style.css.map
-#/css/*
-#/node_modules
-#/css
+css
+css/*
+style.css
+style.css.map
+/css/*
+/node_modules
+/css
 
 # Logs
 logs
